<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC050A13"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_field_background"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/game_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="You win!" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/text_field_background"
            android:baselineAligned="false"
            android:minWidth="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_result_title">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@drawable/time_background"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_title"
                    android:textColor="#FFBBB7B7"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/timer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/timer_text"
                    android:textSize="24sp"
                    tools:text="00:00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_title"
                    android:textColor="#FFBBB7B7"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/goal_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/goal_text"
                    android:textSize="24sp"
                    tools:text="1000/1000" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/default_button_form"
            android:contentDescription="@string/back_button_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/replay_button"
            app:layout_constraintEnd_toStartOf="@+id/replay_button"
            app:layout_constraintTop_toTopOf="@+id/replay_button"
            app:srcCompat="@drawable/play_icon" />

        <ImageButton
            android:id="@+id/replay_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/default_button_form"
            android:contentDescription="@string/back_button_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/replay_icon" />

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/default_button_form"
            android:contentDescription="@string/back_button_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/replay_button"
            app:layout_constraintStart_toEndOf="@+id/replay_button"
            app:layout_constraintTop_toTopOf="@+id/replay_button"
            app:srcCompat="@drawable/home_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>